--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -1,32 +1,41 @@
-<%- include('../includes/head', { pageTitle: 'Signup' }) %>
+<%- include('../../shared/includes/head', { pageTitle: 'Signup' }) %>
     <link rel="stylesheet" href="/styles/forms.css">
     <link rel="stylesheet" href="/styles/auth.css">
 </head>
 <body>
-    <%- include('../includes/header') %>
+    <%- include('../../shared/includes/header') %>
     <main>
         <h1>Create New Account</h1>
+        <% if (inputData.errorMessage) {%>
+            <section class="alert">
+                <h2>Invalid Input</h2>
+                <p>
+                    <%= inputData.errorMessage %>
+                </p>
+            </section>
+        <% } %>
         <form action="/signup" method="POST">
+            <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
             <p>
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email" required>            
+                <input type="email" name="email" id="email" value="<%= inputData.email %>" required>            
             </p>
             <p>
                 <label for="confirm-email">Confirm E-Mail</label>
-                <input type="email" name="confirm-email" id="confirm-email" required>            
+                <input type="email" name="confirm-email" id="confirm-email" value="<%= inputData.confirmEmail %>" required>            
             </p>
             <p>
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password" required>            
+                <input type="password" name="password" id="password" value="<%= inputData.password %>" required>            
             </p>
             <hr>
             <p>
                 <label for="fullname">Full Name</label>
-                <input type="text" name="fullname" id="fullname" required>            
+                <input type="text" name="fullname" id="fullname" value="<%= inputData.fullname %>" required>            
             </p>
             <p>
                 <label for="street">Street</label>
-                <input type="text" name="street" id="street" required>            
+                <input type="text" name="street" id="street" value="<%= inputData.street %>" required>            
             </p>
             <p>
                 <label for="postal">Postal Code</label>
@@ -36,11 +45,12 @@
                     id="postal"
                     minlength="5"
                     maxlength="5"
+                    value="<%= inputData.postal %>"
                     required>            
             </p>
             <p>
                 <label for="city">City</label>
-                <input type="text" name="city" id="city" required>            
+                <input type="text" name="city" id="city" value="<%= inputData.city %>" required>            
             </p>
             <button class="btn">Create account</button>
             <p id="switch-form">
@@ -49,4 +59,4 @@
         </form>
     </main>
 
-<%- include('../includes/footer') %>
+<%- include('../../shared/includes/footer') %>
