--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,6 +1,6 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All Products' }) %>
-    <link rel="stylesheet" href="/styles/forms.css">
-    <link rel="stylesheet" href="/styles/auth.css">
+    <link rel="stylesheet" href="/styles/products.css">
+    <script src="/scripts/product-management.js" defer></script>
 </head>
 <body>
     <%- include('../../shared/includes/header') %>
@@ -13,7 +13,13 @@
             </p>
         </section>
         <section>
-            <p>A list of products...</p>
+            <ul id="products-grid">
+                <% for (const product of products) { %>
+                <li>
+                    <%- include('includes/product-item', {product: product}) %>
+                </li>
+                <% } %>
+            </ul>
         </section>
     </main>
 
