--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -82,6 +82,14 @@ html {
   margin: var(--space-2) 0;
 }
 
+.badge {
+  margin-left: var(--space-2);
+  padding: 0.15rem var(--space-4);
+  border-radius: 10rem;
+  background-color: var(--color-primary-500);
+  color: var(--color-primary-500-contrast);
+}
+
 body {
   background-color: var(--color-gray-500);
   color: var(--color-gray-100);
