--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -1,12 +1,20 @@
 <%- include('../../shared/includes/head', { pageTitle: 'All Products' }) %>
-    <link rel="stylesheet" href="/styles/forms.css">
-    <link rel="stylesheet" href="/styles/auth.css">
+    <link rel="stylesheet" href="/styles/products.css">
+    <script src="/scripts/product-management.js" defer></script>
 </head>
 <body>
     <%- include('../../shared/includes/header') %>
     <main>
         <h1>All Products</h1>
-        <p>A list of products...</p>
+        <section>
+            <ul id="products-grid">
+                <% for (const product of products) { %>
+                <li>
+                    <%- include('../../shared/includes/product-item', {product: product}) %>
+                </li>
+                <% } %>
+            </ul>
+        </section>
     </main>
 
 <%- include('../../shared/includes/footer') %>
